Fixed Calender Day Visibility on tiny Viewport sizes

--- a/content.css
+++ b/content.css
@@ -5,7 +5,8 @@
     .fa-search,
     .userinitials,
     td.today *,
-    .icon
+    .icon,
+    .day *
   ) {
   background-color: #121111 !important;
 }
